--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+@use 'tailwindcss';
+@use 'primeicons/primeicons.css';
+
+body,
+html {
+  height: 100%;
+  margin: 0;
+  min-height: 100%;
+}
