Refactor structure for clients and admin

--- a/src/app/layout/main-layout/main-layout.html
+++ b/src/app/layout/main-layout/main-layout.html
@@ -14,7 +14,7 @@
       <tots-nav-link route="/reservations" label="Reservas" />
       } @case(roles.CLIENT) {
       <tots-nav-link route="/dashboard" label="Explorar" />
-      <tots-nav-link route="/reservations" label="Mis reservas" />
+      <tots-nav-link route="/bookings" label="Mis reservas" />
       } }
     </nav>
 
