--- a/src/app/layout/main-layout/main-layout.html
+++ b/src/app/layout/main-layout/main-layout.html
@@ -3,9 +3,9 @@
     class="flex items-center justify-between bg-white px-8 py-4 shadow-sm border-b border-slate-200 sticky top-0 z-50"
   >
     <div class="flex items-center">
-      <h1 class="text-2xl font-extrabold tracking-tight text-indigo-600">
+      <span class="text-2xl font-extrabold tracking-tight text-indigo-600">
         Reserva <span class="text-slate-400 font-light">tus espacios</span>
-      </h1>
+      </span>
     </div>
 
     <nav class="hidden md:flex items-center space-x-8 text-sm font-medium">
