temporarily disable editting button in reservations

--- a/src/app/features/admin/reservations/reservations.html
+++ b/src/app/features/admin/reservations/reservations.html
@@ -85,13 +85,13 @@
                 </span>
               </div>
               <div class="flex gap-1">
-                <p-button
+                <!-- <p-button
                   icon="pi pi-pencil"
                   [rounded]="true"
                   [text]="true"
                   severity="contrast"
                   (onClick)="handleEdit(reservation.id)"
-                />
+                /> -->
                 <p-button
                   icon="pi pi-trash"
                   [rounded]="true"
