Show error in dialog when error in reservation

--- a/src/app/features/admin/reservations/reservations.html
+++ b/src/app/features/admin/reservations/reservations.html
@@ -148,6 +148,7 @@
   [visible]="showDialog()"
   [reservation]="selectedReservation()"
   [mode]="dialogMode()"
+  [actionError]="actionError()"
   (onClose)="handleCloseDialog()"
   (onSave)="handleSaveReservation($event)"
 />
